--- a/css/custom.css
+++ b/css/custom.css
@@ -31,6 +31,24 @@ ul.nav {
 	color: white;
 }
 
+.modal-content iframe {
+	margin-top: 15px;
+	margin-bottom: 10px;
+}
+
+.modal-content button.close {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    background-color: white;
+    font-size: 28px;
+    width: 30px;
+    opacity: 1;
+    border-radius: 24px;
+     -webkit-border-radius: 24px;
+     -moz-border-radius: 24px;
+}
+
 .jumbotron h1 {
 	margin-top: 0px;
 	margin-bottom: 50px;
@@ -109,6 +127,7 @@ footer {
  	padding: 0 10px;
  
    }
+
 #get-involved .column-md-4 {
 	padding-top: 20px;
 	padding-bottom: 20px;
