--- a/css/custom.css
+++ b/css/custom.css
@@ -29,6 +29,10 @@
 	font-size: 18px;
 }
 
+#one-change {
+	background-color: #f5f5f5;
+}
+
 .econav {
 	margin-left: -55px;
 	margin-top: 7px;
@@ -45,13 +49,55 @@
 	text-align: center;
 }
 
+.homepage hr {
+	border-color: #99CC00;
+	width: 160px;
+	margin-top: -5px;
+}
+
+.homepage h2, .homepage h3 {
+    font-family: 'Arvo', courier, serif;
+	text-transform: uppercase;
+	color: #009900;
+}
+
+.homepage h2 {
+	font-size: 37px;
+	margin-top: 0px
+}
+
+.homepage img {
+    height: 200px;
+	width: 150px;
+	padding-bottom: 10px;
+	padding-top: 15px;
+}
+
+.homepage p {
+	font-size: 24px;
+	font-weight: 300;
+	margin-bottom: 80px;
+}
+
+.homepage a {
+	color: #99CC00;
+}
+
+.homepage a:hover {
+	color: #99CC00;
+	text-decoration: none;
+	opacity: 0.8;
+}
+
 .span {
 	color: #99CC00;
 }
 
 footer {
-	background-color: #99CC00;
-	margin-top: -30px;
+	background-color: #009900;
+	padding-top: 150px;
+	padding-bottom: 30px;
+	position: relative;
 }
 
 /* Responsive Styling */
